--- a/src/elements/content-sharing/stories/ContentSharing.mdx
+++ b/src/elements/content-sharing/stories/ContentSharing.mdx
@@ -1,8 +1,7 @@
 import { Meta } from '@storybook/blocks';
 
-import ContentSharingStories from './ContentSharing.stories';
 
-<Meta of={ContentSharingStories} />
+<Meta />
 
 `import ContentSharing from 'box-ui-elements/es/elements/content-sharing';`
 
