--- a/src/elements/content-explorer/stories/ContentExplorer.mdx
+++ b/src/elements/content-explorer/stories/ContentExplorer.mdx
@@ -4,78 +4,149 @@ import ContentExplorerStories from './ContentExplorer.stories';
 
 <Meta of={ContentExplorerStories} />
 
-### Demo ([Documentation](https://developer.box.com/docs/box-content-explorer))
-```jsx
-var ContentExplorer = require('./ContentExplorer').default;
+[//]: # ()
+[//]: # (### Demo &#40;[Documentation]&#40;https://developer.box.com/docs/box-content-explorer&#41;&#41;)
 
-<IntlProvider locale="en">
-    <ContentExplorer
-        contentPreviewProps={{
-            contentSidebarProps: {
-                detailsSidebarProps: {
-                    hasProperties: true,
-                    hasNotices: true,
-                    hasAccessStats: true,
-                    hasClassification: true,
-                    hasRetentionPolicy: true,
-                },
-                features: FEATURES,
-                hasActivityFeed: true,
-                hasMetadata: true,
-                hasSkills: true,
-                hasVersions: true,
-            },
-        }}
-        features={FEATURES}
-        rootFolderId={FOLDER_ID}
-        token={TOKEN}
-    />
-</IntlProvider>
-```
+[//]: # (```jsx)
 
-### Screenshot
-<img src="https://user-images.githubusercontent.com/1075325/27887154-092a232a-6194-11e7-82f4-697331ac5cbe.png" width="600" alt="" />
----
+[//]: # (var ContentExplorer = require&#40;'./ContentExplorer'&#41;.default;)
 
-### Props
-| Prop                 | Type                                                                                                                                                                                                                 | Default | Description                                                                                                                                                  |
-|----------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------|--------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| token*               | string                                                                                                                                                                                                               |         | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| autoFocus            | boolean                                                                                                                                                                                                              |         | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| canCreateNewFolder   | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| canDelete            | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| canDownload          | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| canPreview           | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| canRename            | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| canSetShareAccess    | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| canShare             | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| canUpload            | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| contentPreviewProps  | Object                                                                                                                                                                                                               | `{}`    | Props to be forwarded to the `ContentPreview` UI Element. *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/preview/#Options).*   |
-| contentUploaderProps | Object                                                                                                                                                                                                               | `{}`    | Props to be forwarded to the `ContentUploader` UI Element. *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/uploader/#Options).* |
-| currentFolderId      | string                                                                                                                                                                                                               |         | The current folder shown for the content explorer. This should be a sub folder to the root folder.                                                           |
-| defaultView          | string                                                                                                                                                                                                               | `files` | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| initialPage          | number                                                                                                                                                                                                               | 1       | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| initialPageSize      | number                                                                                                                                                                                                               | 50      | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| isTouch              | boolean                                                                                                                                                                                                              |         | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| language             | string                                                                                                                                                                                                               | `en-US` | *See the [Internationalization](/docs/elements-usage--docs#internationalization-i18n) section*                                                               |
-| logoUrl              | string                                                                                                                                                                                                               |         | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| messages             | Map&lt;string, string&gt;                                                                                                                                                                                            |         | *See the [Internationalization](/docs/elements-usage--docs#internationalization-i18n) section*                                                               |
-| onCreate             | [Folder](https://developer.box.com/reference#folder-object)&gt;)                                                                                                                                                     |         | Callback function for when a folder is created.                                                                                                              |
-| onDelete             | function(Array&lt;[File](https://developer.box.com/reference#file-object)&gt;)                                                                                                                                       |         | Callback function for when item(s) are deleted.                                                                                                              |
-| onDownload           | function(Array&lt;[File](https://developer.box.com/reference#file-object)&gt;)                                                                                                                                       |         | Callback function for when item(s) are downloaded.                                                                                                           |
-| onNavigate           | function([File](https://developer.box.com/reference#file-object))                                                                                                                                                    |         | Callback function for when navigating into a folder.                                                                                                         |
-| onPreview            | function([File](https://developer.box.com/reference#file-object))                                                                                                                                                    |         | Callback function for when an item is previewed.                                                                                                             |
-| onRename             | function([File](https://developer.box.com/reference#file-object))                                                                                                                                                    |         | Callback function for when an item is renamed.                                                                                                               |
-| onSelect             | function(Array&lt;[Folder](https://developer.box.com/reference#folder-object)&#124;[File](https://developer.box.com/reference#file-object)&#124;[Web Link](https://developer.box.com/reference#web-link-object)&gt;) |         | Callback function for when item(s) are selected.                                                                                                             |
-| onUpload             | function(Array&lt;[File](https://developer.box.com/reference#file-object)&gt;)                                                                                                                                       |         | Callback function for when item(s) are uploaded.                                                                                                             |
-| requestInterceptor   | function                                                                                                                                                                                                             |         | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| responseInterceptor  | function                                                                                                                                                                                                             |         | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| rootFolderId         | string                                                                                                                                                                                                               | `0`     | The root folder for the content explorer.                                                                                                                    |
-| sharedLink           | string                                                                                                                                                                                                               |         | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| sharedLinkPassword   | string                                                                                                                                                                                                               |         | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| sortBy               | string                                                                                                                                                                                                               | `name`  | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
-| sortDirection        | string                                                                                                                                                                                                               | `asc`   | *See the [developer docs](https://developer.box.com/guides/embed/ui-elements/explorer/#Options).*                                                            |
+[//]: # ()
+[//]: # (<IntlProvider locale="en">)
 
-### Keyboard Shortcuts
-*See the [developer docs](https://developer.box.com/docs/box-content-explorer#section-keyboard-shortcuts).*
+[//]: # (    <ContentExplorer)
 
+[//]: # (        contentPreviewProps={{)
+
+[//]: # (            contentSidebarProps: {)
+
+[//]: # (                detailsSidebarProps: {)
+
+[//]: # (                    hasProperties: true,)
+
+[//]: # (                    hasNotices: true,)
+
+[//]: # (                    hasAccessStats: true,)
+
+[//]: # (                    hasClassification: true,)
+
+[//]: # (                    hasRetentionPolicy: true,)
+
+[//]: # (                },)
+
+[//]: # (                features: FEATURES,)
+
+[//]: # (                hasActivityFeed: true,)
+
+[//]: # (                hasMetadata: true,)
+
+[//]: # (                hasSkills: true,)
+
+[//]: # (                hasVersions: true,)
+
+[//]: # (            },)
+
+[//]: # (        }})
+
+[//]: # (        features={FEATURES})
+
+[//]: # (        rootFolderId={FOLDER_ID})
+
+[//]: # (        token={TOKEN})
+
+[//]: # (    />)
+
+[//]: # (</IntlProvider>)
+
+[//]: # (```)
+
+[//]: # ()
+[//]: # (### Screenshot)
+
+[//]: # (<img src="https://user-images.githubusercontent.com/1075325/27887154-092a232a-6194-11e7-82f4-697331ac5cbe.png" width="600" alt="" />)
+
+[//]: # (---)
+
+[//]: # ()
+[//]: # (### Props)
+
+[//]: # (| Prop                 | Type                                                                                                                                                                                                                 | Default | Description                                                                                                                                                  |)
+
+[//]: # (|----------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------|--------------------------------------------------------------------------------------------------------------------------------------------------------------|)
+
+[//]: # (| token*               | string                                                                                                                                                                                                               |         | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| autoFocus            | boolean                                                                                                                                                                                                              |         | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| canCreateNewFolder   | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| canDelete            | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| canDownload          | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| canPreview           | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| canRename            | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| canSetShareAccess    | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| canShare             | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| canUpload            | boolean                                                                                                                                                                                                              | `true`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| contentPreviewProps  | Object                                                                                                                                                                                                               | `{}`    | Props to be forwarded to the `ContentPreview` UI Element. *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/preview/#Options&#41;.*   |)
+
+[//]: # (| contentUploaderProps | Object                                                                                                                                                                                                               | `{}`    | Props to be forwarded to the `ContentUploader` UI Element. *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/uploader/#Options&#41;.* |)
+
+[//]: # (| currentFolderId      | string                                                                                                                                                                                                               |         | The current folder shown for the content explorer. This should be a sub folder to the root folder.                                                           |)
+
+[//]: # (| defaultView          | string                                                                                                                                                                                                               | `files` | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| initialPage          | number                                                                                                                                                                                                               | 1       | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| initialPageSize      | number                                                                                                                                                                                                               | 50      | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| isTouch              | boolean                                                                                                                                                                                                              |         | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| language             | string                                                                                                                                                                                                               | `en-US` | *See the [Internationalization]&#40;/docs/elements-usage--docs#internationalization-i18n&#41; section*                                                               |)
+
+[//]: # (| logoUrl              | string                                                                                                                                                                                                               |         | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| messages             | Map&lt;string, string&gt;                                                                                                                                                                                            |         | *See the [Internationalization]&#40;/docs/elements-usage--docs#internationalization-i18n&#41; section*                                                               |)
+
+[//]: # (| onCreate             | [Folder]&#40;https://developer.box.com/reference#folder-object&#41;&gt;&#41;                                                                                                                                                     |         | Callback function for when a folder is created.                                                                                                              |)
+
+[//]: # (| onDelete             | function&#40;Array&lt;[File]&#40;https://developer.box.com/reference#file-object&#41;&gt;&#41;                                                                                                                                       |         | Callback function for when item&#40;s&#41; are deleted.                                                                                                              |)
+
+[//]: # (| onDownload           | function&#40;Array&lt;[File]&#40;https://developer.box.com/reference#file-object&#41;&gt;&#41;                                                                                                                                       |         | Callback function for when item&#40;s&#41; are downloaded.                                                                                                           |)
+
+[//]: # (| onNavigate           | function&#40;[File]&#40;https://developer.box.com/reference#file-object&#41;&#41;                                                                                                                                                    |         | Callback function for when navigating into a folder.                                                                                                         |)
+
+[//]: # (| onPreview            | function&#40;[File]&#40;https://developer.box.com/reference#file-object&#41;&#41;                                                                                                                                                    |         | Callback function for when an item is previewed.                                                                                                             |)
+
+[//]: # (| onRename             | function&#40;[File]&#40;https://developer.box.com/reference#file-object&#41;&#41;                                                                                                                                                    |         | Callback function for when an item is renamed.                                                                                                               |)
+
+[//]: # (| onSelect             | function&#40;Array&lt;[Folder]&#40;https://developer.box.com/reference#folder-object&#41;&#124;[File]&#40;https://developer.box.com/reference#file-object&#41;&#124;[Web Link]&#40;https://developer.box.com/reference#web-link-object&#41;&gt;&#41; |         | Callback function for when item&#40;s&#41; are selected.                                                                                                             |)
+
+[//]: # (| onUpload             | function&#40;Array&lt;[File]&#40;https://developer.box.com/reference#file-object&#41;&gt;&#41;                                                                                                                                       |         | Callback function for when item&#40;s&#41; are uploaded.                                                                                                             |)
+
+[//]: # (| requestInterceptor   | function                                                                                                                                                                                                             |         | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| responseInterceptor  | function                                                                                                                                                                                                             |         | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| rootFolderId         | string                                                                                                                                                                                                               | `0`     | The root folder for the content explorer.                                                                                                                    |)
+
+[//]: # (| sharedLink           | string                                                                                                                                                                                                               |         | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| sharedLinkPassword   | string                                                                                                                                                                                                               |         | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| sortBy               | string                                                                                                                                                                                                               | `name`  | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # (| sortDirection        | string                                                                                                                                                                                                               | `asc`   | *See the [developer docs]&#40;https://developer.box.com/guides/embed/ui-elements/explorer/#Options&#41;.*                                                            |)
+
+[//]: # ()
+[//]: # (### Keyboard Shortcuts)
+
+[//]: # (*See the [developer docs]&#40;https://developer.box.com/docs/box-content-explorer#section-keyboard-shortcuts&#41;.*)
+
+[//]: # ()
